[gd_scene load_steps=3 format=3 uid="uid://cqk8j2v3h4x5m"]

[ext_resource type="Script" path="res://scripts/objection_dialog.gd" id="1_objection"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.102, 0.102, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.851, 0.753, 0.549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0

[node name="ObjectionDialog" type="CanvasLayer"]
layer = 100
visible = false
script = ExtResource("1_objection")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarshalNameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.851, 0.753, 0.549, 1)
theme_override_font_sizes/font_size = 24
text = "MARSHAL OBJECTS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_color = Color(0.933, 0.933, 0.933, 1)
theme_override_font_sizes/font_size = 16
text = "Marshal's objection message will appear here..."
autowrap_mode = 3
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TrustLabel" type="Label" parent="PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.627, 0.627, 0.659, 1)
theme_override_font_sizes/font_size = 14
text = "Trust: 70 (Reliable)"
horizontal_alignment = 1

[node name="VindicationLabel" type="Label" parent="PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.627, 0.627, 0.659, 1)
theme_override_font_sizes/font_size = 14
text = "Track record: Good"
horizontal_alignment = 1

[node name="AuthorityLabel" type="Label" parent="PanelContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.627, 0.627, 0.659, 1)
theme_override_font_sizes/font_size = 14
text = "Authority: 100"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TrustButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.933, 0.933, 0.933, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Trust Marshal"

[node name="InsistButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.933, 0.933, 0.933, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Proceed as Ordered"

[node name="CompromiseButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.933, 0.933, 0.933, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Find Middle Ground"
